  - added clone option to promotions and promotion schemas [wawryk]
  - added tcpdf support for debit note [pjona]
  - added documents cacheing [wawryk]
  - added support for sending debit notes by mail [chilan]
  - allow to assign numberplans to tariffs [chilan]
  - receiptadd: we show also not accounted debit notes [pjona]
  - separation force_ssl for UI and Userpanel [pjona]

version 1.11.19 (2015-12-21):

  - updated lms swekey code to be conformed with PHP 7 [prezes_kk]
  - added support for message delivery status [Jarosław Dziubek]
  - rewrite of user access rights code completely - it can require
    related adjustments in 3rd party plugins and patches [chilan]
  - introduced new hook which allows to attach handlers for all LMS modules
    before smarty template displaying (*_before_module_display) [chilan]
  - don't use smarty prefilter for document directory [chilan]
  - multiple files can be send by email when we create mail message [chilan]
  - selection of phones and emails is possible when we send message to customer [chilan]
  - fixed liability reports when assignments with many tax rates for customer was
    assigned [chilan]
  - sms.transliterate_message config variable introduced - allows to
    getting rid of national characters in sms messages [chilan]
  - added contract filter for customer list and report [chilan]
  - invoices.customer_credentials and invoices.customer_balance_in_form configuration
    settings were introduced [chilan]
  - userpanel helpdesk module: ticket/message attachment support added [chilan]
  - userpanel helpdesk module: allow customer to download message attachments [chilan]
  - new pagination engine [maciejlew]
  - added limit and offset support for customer list [maciejlew]
  - added flag CONTACT_DISABLED, CONTACT_INVOICES and CONTACT_NOTIFICATIONS to customer contact data [wawryk]
  - adjusted database schema for powerdns 3.4.x [chilan]
  - resolved tcpdf invoice problem where position names were not wrapped [chilan]